manifests/apps/serverpod-test/apps/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: serverpod-test
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
spec:
