manifests/apps/serverpod-test/apps/deployment-postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  labels:
    app: serverpod-test-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: serverpod-test-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: serverpod-test-postgres
    spec:
      serviceAccountName: serverpod-test
      securityContext:
        runAsNonRoot: false
      containers:
        - name: postgres
          image: postgres:14.18
          ports:
            - containerPort: 5432
              hostPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres
          imagePullPolicy: Always
      restartPolicy: Always
      volumes:
        - name: postgres
          persistentVolumeClaim:
            claimName: postgres
