manifests/apps/serverpod-test/apps/service-postgres.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: serverpod-test
spec:
  selector:
    app: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
