manifests/apps/serverpod-test/apps/service-serverpod.yml
apiVersion: v1
kind: Service
metadata:
  name: serverpod
  labels:
    app: serverpod-test
spec:
  selector:
    app: serverpod
  ports:
    - name: web
      port: 8080
      targetPort: 8080
    - name: insights
      port: 8081
      targetPort: 8081
    - name: api
      port: 8082
      targetPort: 8082
