manifests/apps/serverpod-test/apps/route-web.yml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: serverpod-test-web
  labels:
    app: serverpod-test
spec:
  host: serverpod-test.apps.ocp.kounex.com
  to:
    kind: Service
    name: serverpod
    weight: 100
  port:
    targetPort: web
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
